--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,25 +1,58 @@
-<%- if controller_name != 'sessions' %>
-  <%= link_to "Log in", new_session_path(resource_name) %><br />
-<% end %>
-
-<%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <%= link_to "Sign up", new_registration_path(resource_name) %><br />
-<% end %>
-
-<%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-  <%= link_to "Forgot your password?", new_password_path(resource_name) %><br />
-<% end %>
-
-<%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
-  <%= link_to "Didn't receive confirmation instructions?", new_confirmation_path(resource_name) %><br />
-<% end %>
-
-<%- if devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != 'unlocks' %>
-  <%= link_to "Didn't receive unlock instructions?", new_unlock_path(resource_name) %><br />
-<% end %>
-
-<%- if devise_mapping.omniauthable? %>
-  <%- resource_class.omniauth_providers.each do |provider| %>
-    <%= button_to "Sign in with #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider), data: { turbo: false } %><br />
+<div class="auth-links">
+  <%- if controller_name != 'sessions' %>
+    <div class="auth-links__item auth-links__item--primary">
+      <span class="auth-links__text">Already have an account?</span>
+      <%= link_to new_session_path(resource_name), class: "auth-links__link" do %>
+        <i class="fas fa-sign-in-alt"></i>
+        Log in
+      <% end %>
+    </div>
   <% end %>
-<% end %>
+
+  <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
+    <div class="auth-links__item auth-links__item--primary">
+      <span class="auth-links__text">Don't have an account?</span>
+      <%= link_to new_registration_path(resource_name), class: "auth-links__link auth-links__link--coral" do %>
+        <i class="fas fa-user-plus"></i>
+        Sign up
+      <% end %>
+    </div>
+  <% end %>
+
+  <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
+    <div class="auth-links__item">
+      <%= link_to new_password_path(resource_name), class: "auth-links__link auth-links__link--subtle" do %>
+        Forgot your password?
+      <% end %>
+    </div>
+  <% end %>
+
+  <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
+    <div class="auth-links__item">
+      <%= link_to new_confirmation_path(resource_name), class: "auth-links__link auth-links__link--subtle" do %>
+        Didn't receive confirmation instructions?
+      <% end %>
+    </div>
+  <% end %>
+
+  <%- if devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != 'unlocks' %>
+    <div class="auth-links__item">
+      <%= link_to new_unlock_path(resource_name), class: "auth-links__link auth-links__link--subtle" do %>
+        Didn't receive unlock instructions?
+      <% end %>
+    </div>
+  <% end %>
+
+  <%- if devise_mapping.omniauthable? %>
+    <div class="auth-links__divider">
+      <span>or</span>
+    </div>
+    <%- resource_class.omniauth_providers.each do |provider| %>
+      <div class="auth-links__item">
+        <%= button_to omniauth_authorize_path(resource_name, provider), class: "auth-links__oauth", data: { turbo: false } do %>
+          Sign in with <%= OmniAuth::Utils.camelize(provider) %>
+        <% end %>
+      </div>
+    <% end %>
+  <% end %>
+</div>
